--- a/hw10/pyproject.toml
+++ b/hw10/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0.1"
 psycopg2 = "^2.9.9"
+pymongo = "^4.6.1"
+mongoengine = "^0.27.0"
 
 
 [build-system]
